# truthcoin-cpp

./: .gitignore  INSTALL  Makefile.am  README.md  bitcoin.conf  buildall-nix.sh  configure.ac  hivemind.pro  libhivemindconsensus.pc.in
build-aux/m4/: hivemind_find_bdb48.m4  hivemind_qt.m4  hivemind_subdir_to_include.m4
contrib/: README.md  hivemind-qt.pro  hivemindd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  hivemind-qt.desktop  hivemind-qt.install  hivemind-qt.lintian-overrides  hivemind-qt.protocol  hivemindd.bash-completion  hivemindd.examples  hivemindd.install  hivemindd.lintian-overrides  hivemindd.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  (+4 more)
depends/: Makefile  README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  fullnode-setup.txt  gitian-building.md  init.md  multiwallet-qt.md  notes_blockchain.txt  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  (+87 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: hivemind-config.h.in
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/fdlibm/src/: fdlibm.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/linalg/: COPYING  liblinalg.pc.in
src/linalg/src/: tc_mat.c  tc_mat.h
src/primitives/: block.cpp  block.h  market.cpp  market.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  authorpendingtablemodel.cpp  authorpendingtablemodel.h  authorview.cpp  authorview.h  ballotballotfilterproxymodel.cpp  ballotballotfilterproxymodel.h  ballotballottablemodel.cpp  ballotballottablemodel.h  ballotballotwindow.cpp  ballotballotwindow.h  ballotbranchwindow.cpp  ballotbranchwindow.h  ballotoutcomefilterproxymodel.cpp  ballotoutcomefilterproxymodel.h  ballotoutcometablemodel.cpp  ballotoutcometablemodel.h  ballotoutcomewindow.cpp  ballotoutcomewindow.h  ballotsealedvotefilterproxymodel.cpp  ballotsealedvotefilterproxymodel.h  ballotsealedvotetablemodel.cpp  ballotsealedvotetablemodel.h  ballotsealedvotewindow.cpp  ballotsealedvotewindow.h  ballotview.cpp  ballotview.h  ballotvotefilterproxymodel.cpp  ballotvotefilterproxymodel.h  ballotvotetablemodel.cpp  ballotvotetablemodel.h  ballotvotewindow.cpp  ballotvotewindow.h  clientmodel.cpp  (+175 more)
src/qt/forms/: addressbookpage.ui  authorview.ui  combocreationwidget.ui  decisioncreationwidget.ui  decisionmarketcreationwidget.ui  decisionselectionview.ui  helpmessagedialog.ui  hivemindauthorpage.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: hivemind_ach.ts  hivemind_af_ZA.ts  hivemind_ar.ts  hivemind_be_BY.ts  hivemind_bg.ts  hivemind_bs.ts  hivemind_ca.ts  hivemind_ca@valencia.ts  hivemind_ca_ES.ts  hivemind_cmn.ts  hivemind_cs.ts  hivemind_cy.ts  hivemind_da.ts  hivemind_de.ts  hivemind_el_GR.ts  hivemind_en.ts  hivemind_eo.ts  hivemind_es.ts  hivemind_es_CL.ts  hivemind_es_DO.ts  hivemind_es_MX.ts  hivemind_es_UY.ts  hivemind_et.ts  hivemind_eu_ES.ts  hivemind_fa.ts  hivemind_fa_IR.ts  hivemind_fi.ts  hivemind_fr.ts  hivemind_fr_CA.ts  hivemind_gl.ts  hivemind_gu_IN.ts  hivemind_he.ts  hivemind_hi_IN.ts  hivemind_hr.ts  hivemind_hu.ts  hivemind_id_ID.ts  hivemind_it.ts  hivemind_ja.ts  hivemind_ka.ts  hivemind_kk_KZ.ts  (+31 more)
src/qt/res/: hivemind-qt-res.rc
src/qt/res/icons/: hivemind.icns
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: hivemindconsensus.cpp  hivemindconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_hivemind_NativeSecp256k1.c  org_hivemind_NativeSecp256k1.h
src/secp256k1/src/java/org/hivemind/: NativeSecp256k1.java
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hivemind-util-test.py  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_hivemind.cpp  timedata_tests.cpp  (+4 more)
src/test/data/: README.md  hivemind-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+102 files in other folders)
